--- a/module1-hyperparameter-optimization/LS_DS_241_Hyperparameter_Optimization.ipynb
+++ b/module1-hyperparameter-optimization/LS_DS_241_Hyperparameter_Optimization.ipynb
@@ -3610,6 +3610,89 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "g6h55898FsXQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "test set with XGBoost - best model so far with new features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yw5ZIQSQFxAs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_test = jake_wrangle(X_test)\n",
+        "\n",
+        "X_test['SNOW'] = X_test['SNOW'].replace(-9999, 0)\n",
+        "X_test['more_than_average_day_before'] = (X_test['Total_yesterday'] > X_test['Total_yesterday'].mean()).astype(int)\n",
+        "X_test['weekend'] = ((X_test['Sat'] == 1.0)| (X_test['Sun'] == 1.0)).astype(int)\n",
+        "X_test['cold_and_rainy'] = ((X_test['Temp (C)'] < 10) & (X_test['PRCP'] > 0)).astype(int)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "luHcy7KAGrIe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "e5db3b01-0f31-4de2-a08b-cd21f7e1551d"
+      },
+      "source": [
+        "model = xgb.XGBRegressor(n_jobs=-1, random_state=42)\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "mean_absolute_error(y_test, y_pred)"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+            "  if getattr(data, 'base', None) is not None and \\\n",
+            "/usr/local/lib/python3.6/dist-packages/xgboost/core.py:588: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+            "  data.base is not None and isinstance(data, np.ndarray) \\\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "263.22953125"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H0Of4cShIVW5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Got mean absolute error of 263.22... not sure why the increase was so much on the unseen data.  Seems overfit. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "cl0Bm83nvGIr",
         "colab_type": "text"
       },
