--- a/module1-hyperparameter-optimization/LS_DS_241_Hyperparameter_Optimization.ipynb
+++ b/module1-hyperparameter-optimization/LS_DS_241_Hyperparameter_Optimization.ipynb
@@ -3687,7 +3687,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Got mean absolute error of 263.22... not sure why the increase was so much on the unseen data.  Seems overfit. "
+        "## Got mean absolute error of 263.22. "
       ]
     },
     {
