--- a/module1-hyperparameter-optimization/LS_DS_241_Categorical_Encoding.ipynb
+++ b/module1-hyperparameter-optimization/LS_DS_241_Categorical_Encoding.ipynb
@@ -2367,6 +2367,9 @@
         "outputId": "4ff1469e-de40-4107-f251-82c1dad6ba00"
       },
       "source": [
+        "## not going to work with linear model.. also interprability is lost\n",
+        "## but saves memory\n",
+        "\n",
         "encoder = ce.BinaryEncoder()\n",
         "encoded = encoder.fit_transform(X_train[[feature]])\n",
         "print(f'{len(encoded.columns)} columns')\n",
@@ -2509,6 +2512,9 @@
         "outputId": "58b63c1b-69ee-478d-f457-c6e00f06993c"
       },
       "source": [
+        "## tree base models don't care about order\n",
+        "## linear regression it would need to be in meaningful order\n",
+        "\n",
         "encoder = ce.OrdinalEncoder()\n",
         "encoded = encoder.fit_transform(X_train[[feature]])\n",
         "print(f'1 column, {encoded[feature].nunique()} unique values')\n",
@@ -2610,6 +2616,8 @@
         "outputId": "2b5a3a36-c27f-47af-aac8-8bb1cf4ed00b"
       },
       "source": [
+        "## innovate by Kaggle masters.  Uses X AND y.. risk of overfitting\n",
+        "\n",
         "first5 = X_train[feature].head().values\n",
         "train = pd.concat([X_train, y_train], axis='columns')\n",
         "target_mean = train.groupby(feature)['charged_off'].mean()\n",
