--- a/module2-regularization-survival-analysis/LS_DS_242_Review_and_Regularization.ipynb
+++ b/module2-regularization-survival-analysis/LS_DS_242_Review_and_Regularization.ipynb
@@ -1440,7 +1440,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 553
         },
-        "outputId": "0842742d-4a78-4587-912d-a51d424b1d84"
+        "outputId": "e466776c-b15e-4ad0-83db-d34c23ef97fc"
       },
       "source": [
         "from ipywidgets import interact\n",
@@ -1473,13 +1473,13 @@
         "\n",
         "interact(plot_lasso_coefs, power=(-2,2,1));"
       ],
-      "execution_count": 56,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2ab4f52c9c08442c841578c5bd40c220",
+              "model_id": "ec0113ca59ef4db5b1246908b3f370aa",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1509,7 +1509,7 @@
         "\n",
         "pipe = make_pipeline(StandardScaler(), LassoCV(cv=3))\n",
         "pipe.fit(X_train, y_train)\n",
-        "lasso = pipe.named_steps['lassocv']\n",
+        "lasso = pipe.named_steps['lassocv'] # Named_steps is used to get the estimator in the make_pipeline()\n",
         "print('Lasso Linear Model, alpha value optimized with cross validation:', lasso.alpha_)"
       ],
       "execution_count": 60,
