--- a/module2-regularization-survival-analysis/LS_DS_242_Review_and_Regularization.ipynb
+++ b/module2-regularization-survival-analysis/LS_DS_242_Review_and_Regularization.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -419,19 +419,19 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    1.7s\n",
+      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    1.8s\n",
       "[Parallel(n_jobs=-1)]: Done   8 tasks      | elapsed:    2.0s\n",
       "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    2.2s\n",
       "[Parallel(n_jobs=-1)]: Done  26 tasks      | elapsed:    2.5s\n",
       "[Parallel(n_jobs=-1)]: Done  37 tasks      | elapsed:    2.9s\n",
-      "[Parallel(n_jobs=-1)]: Done  48 tasks      | elapsed:    3.4s\n",
+      "[Parallel(n_jobs=-1)]: Done  48 tasks      | elapsed:    3.3s\n",
       "[Parallel(n_jobs=-1)]: Done  61 tasks      | elapsed:    3.8s\n",
-      "[Parallel(n_jobs=-1)]: Done  74 tasks      | elapsed:    4.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  89 tasks      | elapsed:    4.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 104 tasks      | elapsed:    5.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 121 tasks      | elapsed:    5.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 143 out of 150 | elapsed:    6.7s remaining:    0.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    7.0s finished\n",
+      "[Parallel(n_jobs=-1)]: Done  74 tasks      | elapsed:    4.3s\n",
+      "[Parallel(n_jobs=-1)]: Done  89 tasks      | elapsed:    4.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 104 tasks      | elapsed:    5.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 121 tasks      | elapsed:    5.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 143 out of 150 | elapsed:    6.4s remaining:    0.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    6.6s finished\n",
       "/home/seek/anaconda3/lib/python3.7/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
       "  if getattr(data, 'base', None) is not None and \\\n",
       "/home/seek/anaconda3/lib/python3.7/site-packages/xgboost/core.py:588: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
@@ -450,13 +450,13 @@
        "       reg_lambda=1, scale_pos_weight=1, seed=None, silent=True,\n",
        "       subsample=1),\n",
        "          fit_params=None, iid='warn', n_iter=50, n_jobs=-1,\n",
-       "          param_distributions={'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7fede41ac8d0>, 'max_depth': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7fede41acd30>},\n",
+       "          param_distributions={'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f3a5e2c95c0>, 'max_depth': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f3a55eb0978>},\n",
        "          pre_dispatch='2*n_jobs', random_state=42, refit=True,\n",
        "          return_train_score=True, scoring='neg_mean_absolute_error',\n",
        "          verbose=10)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -554,10 +554,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>0.169143</td>\n",
-       "      <td>0.007710</td>\n",
-       "      <td>0.004001</td>\n",
-       "      <td>0.000013</td>\n",
+       "      <td>0.168039</td>\n",
+       "      <td>0.006062</td>\n",
+       "      <td>0.004046</td>\n",
+       "      <td>0.000177</td>\n",
        "      <td>4</td>\n",
        "      <td>99</td>\n",
        "      <td>{'max_depth': 4, 'n_estimators': 99}</td>\n",
@@ -575,10 +575,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.181074</td>\n",
-       "      <td>0.003620</td>\n",
-       "      <td>0.004289</td>\n",
-       "      <td>0.000242</td>\n",
+       "      <td>0.181692</td>\n",
+       "      <td>0.001229</td>\n",
+       "      <td>0.004165</td>\n",
+       "      <td>0.000169</td>\n",
        "      <td>3</td>\n",
        "      <td>137</td>\n",
        "      <td>{'max_depth': 3, 'n_estimators': 137}</td>\n",
@@ -596,10 +596,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.808566</td>\n",
-       "      <td>0.007281</td>\n",
-       "      <td>0.004215</td>\n",
-       "      <td>0.000199</td>\n",
+       "      <td>0.828380</td>\n",
+       "      <td>0.009300</td>\n",
+       "      <td>0.004531</td>\n",
+       "      <td>0.000521</td>\n",
        "      <td>3</td>\n",
        "      <td>121</td>\n",
        "      <td>{'max_depth': 3, 'n_estimators': 121}</td>\n",
@@ -617,10 +617,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
-       "      <td>0.283507</td>\n",
-       "      <td>0.006758</td>\n",
-       "      <td>0.005199</td>\n",
-       "      <td>0.000463</td>\n",
+       "      <td>0.257401</td>\n",
+       "      <td>0.001553</td>\n",
+       "      <td>0.004208</td>\n",
+       "      <td>0.000577</td>\n",
        "      <td>2</td>\n",
        "      <td>267</td>\n",
        "      <td>{'max_depth': 2, 'n_estimators': 267}</td>\n",
@@ -638,10 +638,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
-       "      <td>0.357502</td>\n",
-       "      <td>0.027427</td>\n",
-       "      <td>0.005413</td>\n",
-       "      <td>0.000671</td>\n",
+       "      <td>0.296232</td>\n",
+       "      <td>0.000756</td>\n",
+       "      <td>0.004895</td>\n",
+       "      <td>0.000290</td>\n",
        "      <td>2</td>\n",
        "      <td>291</td>\n",
        "      <td>{'max_depth': 2, 'n_estimators': 291}</td>\n",
@@ -663,11 +663,11 @@
       ],
       "text/plain": [
        "    mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "41       0.169143      0.007710         0.004001        0.000013   \n",
-       "6        0.181074      0.003620         0.004289        0.000242   \n",
-       "2        0.808566      0.007281         0.004215        0.000199   \n",
-       "47       0.283507      0.006758         0.005199        0.000463   \n",
-       "32       0.357502      0.027427         0.005413        0.000671   \n",
+       "41       0.168039      0.006062         0.004046        0.000177   \n",
+       "6        0.181692      0.001229         0.004165        0.000169   \n",
+       "2        0.828380      0.009300         0.004531        0.000521   \n",
+       "47       0.257401      0.001553         0.004208        0.000577   \n",
+       "32       0.296232      0.000756         0.004895        0.000290   \n",
        "\n",
        "   param_max_depth param_n_estimators                                 params  \\\n",
        "41               4                 99   {'max_depth': 4, 'n_estimators': 99}   \n",
@@ -698,7 +698,7 @@
        "32         -161.756025       -161.115051         4.266057  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -757,10 +757,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>0.216726</td>\n",
-       "      <td>0.023488</td>\n",
-       "      <td>0.004124</td>\n",
-       "      <td>0.000420</td>\n",
+       "      <td>0.173366</td>\n",
+       "      <td>0.006066</td>\n",
+       "      <td>0.003873</td>\n",
+       "      <td>0.000054</td>\n",
        "      <td>1</td>\n",
        "      <td>216</td>\n",
        "      <td>{'max_depth': 1, 'n_estimators': 216}</td>\n",
@@ -778,10 +778,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>0.165387</td>\n",
-       "      <td>0.009202</td>\n",
-       "      <td>0.003752</td>\n",
-       "      <td>0.000147</td>\n",
+       "      <td>0.154283</td>\n",
+       "      <td>0.004850</td>\n",
+       "      <td>0.003779</td>\n",
+       "      <td>0.000155</td>\n",
        "      <td>1</td>\n",
        "      <td>210</td>\n",
        "      <td>{'max_depth': 1, 'n_estimators': 210}</td>\n",
@@ -799,10 +799,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.117422</td>\n",
-       "      <td>0.004195</td>\n",
-       "      <td>0.003740</td>\n",
-       "      <td>0.000412</td>\n",
+       "      <td>0.101829</td>\n",
+       "      <td>0.001811</td>\n",
+       "      <td>0.003451</td>\n",
+       "      <td>0.000088</td>\n",
        "      <td>1</td>\n",
        "      <td>149</td>\n",
        "      <td>{'max_depth': 1, 'n_estimators': 149}</td>\n",
@@ -820,10 +820,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>0.076228</td>\n",
-       "      <td>0.003593</td>\n",
-       "      <td>0.003146</td>\n",
-       "      <td>0.000091</td>\n",
+       "      <td>0.077415</td>\n",
+       "      <td>0.002705</td>\n",
+       "      <td>0.003327</td>\n",
+       "      <td>0.000173</td>\n",
        "      <td>1</td>\n",
        "      <td>108</td>\n",
        "      <td>{'max_depth': 1, 'n_estimators': 108}</td>\n",
@@ -841,10 +841,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.675507</td>\n",
-       "      <td>0.033429</td>\n",
-       "      <td>0.003278</td>\n",
-       "      <td>0.000120</td>\n",
+       "      <td>0.705970</td>\n",
+       "      <td>0.010267</td>\n",
+       "      <td>0.003570</td>\n",
+       "      <td>0.000267</td>\n",
        "      <td>1</td>\n",
        "      <td>70</td>\n",
        "      <td>{'max_depth': 1, 'n_estimators': 70}</td>\n",
@@ -866,11 +866,11 @@
       ],
       "text/plain": [
        "    mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "29       0.216726      0.023488         0.004124        0.000420   \n",
-       "14       0.165387      0.009202         0.003752        0.000147   \n",
-       "7        0.117422      0.004195         0.003740        0.000412   \n",
-       "18       0.076228      0.003593         0.003146        0.000091   \n",
-       "3        0.675507      0.033429         0.003278        0.000120   \n",
+       "29       0.173366      0.006066         0.003873        0.000054   \n",
+       "14       0.154283      0.004850         0.003779        0.000155   \n",
+       "7        0.101829      0.001811         0.003451        0.000088   \n",
+       "18       0.077415      0.002705         0.003327        0.000173   \n",
+       "3        0.705970      0.010267         0.003570        0.000267   \n",
        "\n",
        "   param_max_depth param_n_estimators                                 params  \\\n",
        "29               1                216  {'max_depth': 1, 'n_estimators': 216}   \n",
@@ -901,7 +901,7 @@
        "3          -338.039347       -335.974341         8.401957  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "       subsample=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1028,15 +1028,16 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.0368s.) Setting batch_size=10.\n",
+      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.0919s.) Setting batch_size=4.\n",
       "[Parallel(n_jobs=-1)]: Done   8 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  44 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 264 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 324 out of 500 | elapsed:    1.2s remaining:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 500 out of 500 | elapsed:    1.6s finished\n",
+      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.1473s.) Setting batch_size=10.\n",
+      "[Parallel(n_jobs=-1)]: Done  32 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=-1)]: Done  76 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 120 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 500 out of 500 | elapsed:    1.5s finished\n",
       "/home/seek/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
       "  DeprecationWarning)\n"
      ]
@@ -1047,7 +1048,7 @@
        "RandomizedSearchCV(cv=5, error_score='raise-deprecating',\n",
        "          estimator=Pipeline(memory=None,\n",
        "     steps=[('robustscaler', RobustScaler(copy=True, quantile_range=(25.0, 75.0), with_centering=True,\n",
-       "       with_scaling=True)), ('selectkbest', SelectKBest(k=10, score_func=<function f_regression at 0x7feddc6ef048>)), ('ridge', Ridge(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=None,\n",
+       "       with_scaling=True)), ('selectkbest', SelectKBest(k=10, score_func=<function f_regression at 0x7f3a436c7d90>)), ('ridge', Ridge(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=None,\n",
        "   normalize=False, random_state=None, solver='auto', tol=0.001))]),\n",
        "          fit_params=None, iid='warn', n_iter=100, n_jobs=-1,\n",
        "          param_distributions={'selectkbest__k': range(1, 40), 'ridge__alpha': [0.1, 1.0, 10.0]},\n",
@@ -1056,7 +1057,7 @@
        "          verbose=10)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1202,13 +1203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e21cb75b393245f392ed7502758bf622",
+       "model_id": "c9975396fd1f498f9cfb262883a7d9b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
