--- a/module3-model-interpretation/LS_DS_243_Model_Interpretation.ipynb
+++ b/module3-model-interpretation/LS_DS_243_Model_Interpretation.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -231,10 +231,10 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:   31.3s\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   4 | elapsed:   33.2s remaining:   33.2s\n",
-      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:  1.0min remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:  1.0min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:   29.7s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   4 | elapsed:   31.3s remaining:   31.3s\n",
+      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:   57.3s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:   57.3s finished\n"
      ]
     },
     {
@@ -248,12 +248,12 @@
        "       random_state=42, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
        "       seed=None, silent=True, subsample=1),\n",
        "          fit_params=None, iid='warn', n_iter=2, n_jobs=-1,\n",
-       "          param_distributions={'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x1a2531ea90>, 'max_depth': <scipy.stats._distn_infrastructure.rv_frozen object at 0x1a1fffa8d0>},\n",
+       "          param_distributions={'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x1a21596d30>, 'max_depth': <scipy.stats._distn_infrastructure.rv_frozen object at 0x10e905f60>},\n",
        "          pre_dispatch='2*n_jobs', random_state=42, refit=True,\n",
        "          return_train_score=True, scoring='roc_auc', verbose=10)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,9 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation ROC AUC with sub_grade: 0.7210805152839438\n",
+      "Cross-Validation ROC AUC without sub_grade: 0.7192418252064083\n",
+      "Drop-Column Importance: 0.0018386900775354542\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
@@ -430,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +454,7 @@
        "Name: sub_grade, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,21 +465,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5055     2.2\n",
+       "5055     6.3\n",
        "86027    2.5\n",
-       "86874    3.2\n",
-       "59692    3.4\n",
-       "47200    2.5\n",
+       "86874    3.5\n",
+       "59692    4.1\n",
+       "47200    1.3\n",
        "Name: sub_grade, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +492,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+       "       max_depth=2, min_child_weight=1, missing=None, n_estimators=229,\n",
+       "       n_jobs=-1, nthread=None, objective='binary:logistic',\n",
+       "       random_state=42, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
+       "       seed=None, silent=True, subsample=1)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +525,7 @@
      "output_type": "stream",
      "text": [
       "Test ROC AUC score with sub-grade: 0.7155068233276889\n",
-      "Test ROC AUC score with sub_grade permuted: 0.6210342343919893\n"
+      "Test ROC AUC score with sub_grade permuted: 0.624162446897236\n"
      ]
     }
    ],
