update from yesterday

--- a/module3-model-interpretation/LS_DS_243_Model_Interpretation.ipynb
+++ b/module3-model-interpretation/LS_DS_243_Model_Interpretation.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -221,10 +221,10 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    6.3s\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   4 | elapsed:    6.7s remaining:    6.7s\n",
-      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:   14.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:   14.0s finished\n"
+      "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    6.2s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   4 | elapsed:    6.6s remaining:    6.6s\n",
+      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:   13.9s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   4 out of   4 | elapsed:   13.9s finished\n"
      ]
     },
     {
@@ -238,12 +238,12 @@
        "       random_state=42, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
        "       seed=None, silent=True, subsample=1),\n",
        "          fit_params=None, iid='warn', n_iter=2, n_jobs=-1,\n",
-       "          param_distributions={'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f8b20b21cf8>, 'max_depth': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f8b20b21e10>},\n",
+       "          param_distributions={'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f8b5066c400>, 'max_depth': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f8b0e0540f0>},\n",
        "          pre_dispatch='2*n_jobs', random_state=42, refit=True,\n",
        "          return_train_score=True, scoring='roc_auc', verbose=10)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "Name: sub_grade, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,21 +456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5055     7.1\n",
-       "86027    4.1\n",
-       "86874    2.4\n",
-       "59692    1.5\n",
-       "47200    2.3\n",
+       "5055     4.3\n",
+       "86027    4.2\n",
+       "86874    1.1\n",
+       "59692    5.1\n",
+       "47200    1.5\n",
        "Name: sub_grade, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
      "output_type": "stream",
      "text": [
       "Test ROC AUC socre with sub_grade: 0.7155068233276888\n",
-      "Test ROC AUC score with sub_grade permuted: 0.6225284530896622\n"
+      "Test ROC AUC score with sub_grade permuted: 0.6298707822502561\n"
      ]
     }
    ],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "           n_iter=2, random_state=42, refit=True, scoring='roc_auc')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1811,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
