adding details to widget

--- a/module4-gradient-descent/LS_DS_244_Gradient_Descent.ipynb
+++ b/module4-gradient-descent/LS_DS_244_Gradient_Descent.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "LS_DS_244_Gradient_Descent.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "codemirror_mode": {
@@ -26,6 +27,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/will-cotton4/DS-Unit-2-Sprint-4-Practicing-Understanding/blob/master/module4-gradient-descent/LS_DS_244_Gradient_Descent.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -890,17 +901,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 746
         },
-        "outputId": "6129eeaf-5472-4f0a-bb73-45836b627c38"
+        "outputId": "42d42d91-5214-4478-c505-10a889e0b293"
       },
       "source": [
         "%matplotlib inline\n",
         "def gradient_descent(start_at=np.random.uniform(-1,1),\n",
         "                    iterations=10,\n",
         "                    learning_rate=0.1):\n",
-        "  plt.subplots\n",
-        "  plt.figure(figsize=(15,10), xlim=-1.1)\n",
+        "  fig = plt.figure(figsize=(15,10))\n",
+        "  fig.add_axes()\n",
+        "  ax = fig.add_subplot(111)\n",
+        "  ax.set_xlim(-1.1, 1.1, 0.1)\n",
+        "  ax.set_ylim(-0.2, 1.1, 0.1)\n",
         "  #plot f(x) = x**2\n",
-        "  xs=np.linspace(start=-1, stop=1)\n",
+        "  xs=np.linspace(start=-2, stop=2)\n",
         "  squares = xs**2\n",
         "  plt.plot(xs, squares, color='grey')\n",
         "  plt.xlabel('x')\n",
@@ -917,18 +931,18 @@
         "interact(gradient_descent, start_at=(-1,1,0.5), iterations=(1,20,1), \n",
         "         learning_rate=(0.05, 0.96, 0.05));"
       ],
-      "execution_count": 29,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "334dfda0277143e1980f6a6d105a0c2e",
+              "model_id": "26d66c72e6bf4956868c47ef2a9a4191",
               "version_minor": 0,
               "version_major": 2
             },
             "text/plain": [
-              "interactive(children=(FloatSlider(value=-0.9835890627653712, description='start_at', max=1.0, min=-1.0, step=0…"
+              "interactive(children=(FloatSlider(value=0.12050060646999605, description='start_at', max=1.0, min=-1.0, step=0…"
             ]
           },
           "metadata": {
