--- a/module3-model-interpretation/LS_DS_243_BONUS_Feature_Selection.ipynb
+++ b/module3-model-interpretation/LS_DS_243_BONUS_Feature_Selection.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -315,10 +315,8 @@
        "4   9.770285  "
       ]
      },
-     "execution_count": 2,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 5,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -763,7 +761,7 @@
     "id": "uIUBoCf8NsIA"
    },
    "source": [
-    "#### Y_bal (balanced binary output)\n",
+    "## Y_bal (balanced binary output)\n",
     "\n",
     "options\n",
     "* SelectKBest\n",
@@ -1462,7 +1460,7 @@
     }
    ],
    "source": [
-    "'''from stability_selection import (RandomizedLogisticRegression,\n",
+    "from stability_selection import (RandomizedLogisticRegression,\n",
     "                                 RandomizedLasso, StabilitySelection,\n",
     "                                 plot_stability_path)\n",
     "\n",
@@ -1470,8 +1468,7 @@
     "rl = RandomizedLasso(max_iter=2000)\n",
     "rl_selector = StabilitySelection(base_estimator=rl, lambda_name='alpha',\n",
     "                                 n_jobs=2)\n",
-    "rl_selector.fit(X, y);\n",
-    "'''"
+    "rl_selector.fit(X, y);\n"
    ]
   },
   {
