Sprint Challenge  Push to GitHub

--- a/module1-hyperparameter-optimization/LS_DS_241_Hyperparameter_Optimization_LIVE_LESSON.ipynb
+++ b/module1-hyperparameter-optimization/LS_DS_241_Hyperparameter_Optimization_LIVE_LESSON.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "!curl -o FremontBridge.csv https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD"
+    "#!curl -o FremontBridge.csv https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD"
    ]
   },
   {
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "!wget https://raw.githubusercontent.com/jakevdp/PythonDataScienceHandbook/master/notebooks/data/BicycleWeather.csv"
+    "#!wget https://raw.githubusercontent.com/jakevdp/PythonDataScienceHandbook/master/notebooks/data/BicycleWeather.csv"
    ]
   },
   {
@@ -1099,6 +1099,13 @@
     "\n",
     "Diagram Source: https://jakevdp.github.io/PythonDataScienceHandbook/05.03-hyperparameters-and-model-validation.html#Validation-curves-in-Scikit-Learn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
