--- a/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
+++ b/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
@@ -1036,7 +1036,7 @@
         "outputId": "9800fbbe-89f3-4ecb-98bf-720927e85b26"
       },
       "source": [
-        "#fitting out XGBoost Regressor \n",
+        "#fitting out XGBoost Classifier \n",
         "#XGBoost fits sequentially, and works well with \"stumps\"\n",
         "#increasing 'Max Depth' would make it MEGA slow and not increase cross-val scores that much \n",
         "#almost 1 min to fit, yikes \n",
@@ -2011,7 +2011,7 @@
         "outputId": "a995eb62-f38b-4ade-c8a7-dfc20cd93082"
       },
       "source": [
-        "#fitting out XGBoost Regressor without \"Inspection Type\"\n",
+        "#fitting out XGBoost Classifier without \"Inspection Type\"\n",
         "param_distributions = {\n",
         "    'n_estimators': [100, 200, 300] ,\n",
         "    'max_depth': [1, 2]\n",
