--- a/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
+++ b/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
@@ -202,12 +202,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0a3deb6b-5317-4eb8-a2ae-2c25d7d43ca2"
+        "outputId": "f16d7879-ea13-425a-f412-9fbfbdfb5446"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 23,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 47
         }
       ]
     },
@@ -245,12 +245,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6933ba62-b43a-40cb-b433-86650aed5af4"
+        "outputId": "e1554af7-1718-44e3-cfa9-5cfdee59a0e0"
       },
       "source": [
         "y_train.shape"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 49
         }
       ]
     },
@@ -273,32 +273,28 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 275
+          "height": 207
         },
-        "outputId": "836676cc-08bb-428e-9bfb-a1d83d0963b1"
+        "outputId": "691653b2-dc23-41ea-f2c6-3025ae29ad6c"
       },
       "source": [
         "!pip install category_encoders"
       ],
-      "execution_count": 24,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting category_encoders\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/6e/a1/f7a22f144f33be78afeb06bfa78478e8284a64263a3c09b1ef54e673841e/category_encoders-2.0.0-py2.py3-none-any.whl (87kB)\n",
-            "\u001b[K     |████████████████████████████████| 92kB 3.4MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.24.2)\n",
-            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.5.1)\n",
+            "Requirement already satisfied: category_encoders in /usr/local/lib/python3.6/dist-packages (2.0.0)\n",
             "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.2.1)\n",
-            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.9.0)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.16.3)\n",
             "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.20.3)\n",
+            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.24.2)\n",
+            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.16.3)\n",
+            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.9.0)\n",
+            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.5.1)\n",
             "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders) (2.5.3)\n",
             "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders) (2018.9)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders) (1.12.0)\n",
-            "Installing collected packages: category-encoders\n",
-            "Successfully installed category-encoders-2.0.0\n"
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders) (1.12.0)\n"
           ],
           "name": "stdout"
         }
@@ -340,12 +336,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 241
         },
-        "outputId": "4c8b79dc-206c-4df8-97b7-629a2444246b"
+        "outputId": "4a7d5bfb-d1ec-44e9-ef0e-15e1a9f71a0b"
       },
       "source": [
         "X_train.head()"
       ],
-      "execution_count": 27,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +617,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 53
         }
       ]
     },
@@ -642,9 +638,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 377
+          "height": 360
         },
-        "outputId": "763e5bd2-5348-412a-d5cf-a687f9494773"
+        "outputId": "ceda9a2b-c978-4bde-fbc2-0d486582d00c"
       },
       "source": [
         "from sklearn.model_selection import RandomizedSearchCV\n",
@@ -660,7 +656,7 @@
         "    param_distributions=param_distributions, \n",
         "    n_iter=8, \n",
         "    cv=3, \n",
-        "    scoring='neg_mean_absolute_error', \n",
+        "    scoring='roc_auc', \n",
         "    verbose=10, \n",
         "    return_train_score=True, \n",
         "    n_jobs=-1\n",
@@ -668,7 +664,7 @@
         "\n",
         "gridsearch.fit(X_train, y_train)"
       ],
-      "execution_count": 30,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,10 +679,10 @@
             "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_search.py:271: UserWarning: The total space of parameters 4 is smaller than n_iter=8. Running 4 iterations. For exhaustive searches, use GridSearchCV.\n",
             "  % (grid_size, self.n_iter, grid_size), UserWarning)\n",
             "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
-            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    3.1s\n",
-            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:    7.3s\n",
-            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:   13.3s\n",
-            "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:   19.8s finished\n"
+            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    3.8s\n",
+            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:    7.9s\n",
+            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:   14.2s\n",
+            "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:   21.1s finished\n"
           ],
           "name": "stderr"
         },
@@ -704,14 +700,13 @@
               "          fit_params=None, iid='warn', n_iter=8, n_jobs=-1,\n",
               "          param_distributions={'n_estimators': [100, 200], 'max_depth': [4, 5]},\n",
               "          pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
-              "          return_train_score=True, scoring='neg_mean_absolute_error',\n",
-              "          verbose=10)"
+              "          return_train_score=True, scoring='roc_auc', verbose=10)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 54
         }
       ]
     },
@@ -737,12 +732,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "d86c6a7d-0aff-4561-dc52-30ab6493b89a"
+        "outputId": "e4fa721e-0efc-4e69-b267-c6536326ec77"
       },
       "source": [
         "best.predict_proba(X_train)"
       ],
-      "execution_count": 36,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,7 +755,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 56
         }
       ]
     },
@@ -802,12 +797,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "84094ade-d00c-44a9-daa5-e26fae104e14"
+        "outputId": "b71bd425-51e0-4f91-c470-d5783f93659c"
       },
       "source": [
         "roc_auc_score(y_train, y_pred_proba)"
       ],
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +814,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 59
         }
       ]
     },
