--- a/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
+++ b/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
@@ -6,6 +6,7 @@
       "name": "DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "language_info": {
@@ -178,7 +179,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1207
+          "height": 1227
         },
         "outputId": "36036064-483c-4d28-966a-45de09db04c2"
       },
@@ -575,9 +576,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 153
         },
-        "outputId": "3c92ea45-44eb-470f-ac81-69897854e319"
+        "outputId": "10742a39-de1d-4fa4-b60e-d6585c8aa013"
       },
       "source": [
         "from scipy.stats import randint\n",
@@ -586,14 +587,14 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "\n",
         "param_distributions = {\n",
-        "    'n_estimators': randint(50,500), \n",
+        "    'n_estimators': randint(100,500), \n",
         "    'max_depth': randint(2,4)\n",
         "}\n",
         "\n",
         "gridsearch = RandomizedSearchCV(\n",
         "    XGBClassifier(n_jobs=-1, random_state=42), \n",
         "    param_distributions=param_distributions, \n",
-        "    n_iter=10, \n",
+        "    n_iter=4, \n",
         "    cv=3, \n",
         "    scoring='roc_auc', \n",
         "    verbose=10, \n",
@@ -609,16 +610,16 @@
         "\n",
         "best = gridsearch.best_estimator_\n",
         "\n",
-        "y_pred = best.predict(X_test)\n",
+        "y_pred = best.predict_proba(X_test)[:,1]\n",
         "\n",
         "print(roc_auc_score(y_test, y_pred))"
       ],
-      "execution_count": 36,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
+            "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n"
           ],
           "name": "stdout"
         },
@@ -626,12 +627,10 @@
           "output_type": "stream",
           "text": [
             "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
-            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    4.9s\n",
-            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:   17.3s\n",
-            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:   43.8s\n",
-            "[Parallel(n_jobs=-1)]: Done  14 tasks      | elapsed:   58.7s\n",
-            "[Parallel(n_jobs=-1)]: Done  21 tasks      | elapsed:  1.5min\n",
-            "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:  1.9min finished\n"
+            "[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:    8.1s\n",
+            "[Parallel(n_jobs=-1)]: Done   4 tasks      | elapsed:   16.7s\n",
+            "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:   26.2s\n",
+            "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:   46.1s finished\n"
           ],
           "name": "stderr"
         },
@@ -639,7 +638,7 @@
           "output_type": "stream",
           "text": [
             "0.6653957431422305\n",
-            "0.5688030884054261\n"
+            "0.6743299634441269\n"
           ],
           "name": "stdout"
         }
