Updated Sprint Challenge
Added test ROC_AUC score

--- a/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
+++ b/DS_Unit_2_Sprint_Challenge_4_Practicing_Understanding.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "4                                                NaN     0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "freq                                                  741  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "max        1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "Name: Fail, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,28 +657,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "import category_encoders as ce\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['Facility Type', 'Risk', 'Zip', 'Inspection Type']\n",
+    "features = ['Facility Type', 'Risk', 'City', 'Inspection Type']\n",
     "target = 'Fail'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,13 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocess = make_pipeline(\n",
-    "    ce.OrdinalEncoder(),\n",
-    "    SimpleImputer(strategy='mean')\n",
+    "    ce.OneHotEncoder(),\n",
+    "    SimpleImputer(strategy='most_frequent'),\n",
+    "    StandardScaler()\n",
     ")"
    ]
   },
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,30 +717,31 @@
     "os.environ['KMP_DUPLICATE_LIB_OK']='True'\n",
     "\n",
     "from xgboost import XGBClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.pipeline import Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Pipeline(steps=[\n",
     "    ('preprocess', preprocess),\n",
-    "    ('boost', XGBClassifier(n_jobs=-1))\n",
+    "    ('boost', LogisticRegression(n_jobs=-1))\n",
     "])\n",
     "\n",
     "param_grid = {\n",
-    "    'boost__n_estimators':[100, 250],\n",
-    "    'boost__max_depth':[3, 5, 7]\n",
+    "    'boost__max_iter':[100, 500, 1000],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -747,16 +750,18 @@
        "RandomizedSearchCV(cv=3, error_score='raise-deprecating',\n",
        "          estimator=Pipeline(memory=None,\n",
        "     steps=[('preprocess', Pipeline(memory=None,\n",
-       "     steps=[('ordinalencoder', OrdinalEncoder(cols=None, drop_invariant=False, handle_missing='value',\n",
-       "        handle_unknown='value', mapping=None, return_df=True, verbose=0)), ('simpleimputer', SimpleImputer(copy=True, fill_value=None, missing_values=nan...tate=0, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
-       "       seed=None, silent=True, subsample=1))]),\n",
-       "          fit_params=None, iid='warn', n_iter=6, n_jobs=-1,\n",
-       "          param_distributions={'boost__n_estimators': [100, 250], 'boost__max_depth': [3, 5, 7]},\n",
+       "     steps=[('onehotencoder', OneHotEncoder(cols=['Facility Type', 'Risk', 'City', 'Inspection Type'],\n",
+       "       drop_invariant=False, handle_missing='value',\n",
+       "       handle_unknown='value', return_df=True, use_cat_names=False,\n",
+       "       verbose=0)), ('simpleimpu...penalty='l2', random_state=None, solver='warn', tol=0.0001,\n",
+       "          verbose=0, warm_start=False))]),\n",
+       "          fit_params=None, iid='warn', n_iter=2, n_jobs=-1,\n",
+       "          param_distributions={'boost__max_iter': [100, 500, 1000]},\n",
        "          pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
        "          return_train_score=True, scoring='roc_auc', verbose=0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +771,7 @@
     "                            param_distributions = param_grid,\n",
     "                            return_train_score=True,\n",
     "                            scoring='roc_auc',\n",
-    "                            n_iter=6,\n",
+    "                            n_iter=2,\n",
     "                            cv=3,\n",
     "                            n_jobs=-1\n",
     ")\n",
@@ -776,14 +781,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best CV Validation Score: 0.703757323693119\n"
+      "Best CV Validation Score: 0.6755262027090355\n"
      ]
     }
    ],
@@ -794,28 +799,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocess.fit(X_train)\n",
+    "X_test_processed = preprocess.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('boost', XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "        colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
-       "        max_depth=5, min_child_weight=1, missing=None, n_estimators=250,\n",
-       "        n_jobs=-1, nthread=None, objective='binary:logistic',\n",
-       "        random_state=0, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
-       "        seed=None, silent=True, subsample=1))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test ROC AUC Score: 0.6826377806194756\n"
+     ]
     }
    ],
    "source": [
-    "best_estimator = search.best_estimator_\n",
-    "best_estimator.steps[1]"
+    "y_test_pred = search.predict_proba(X_test)[:,1]\n",
+    "score = roc_auc_score(y_test, y_test_pred)\n",
+    "print(f'Test ROC AUC Score: {score}')"
    ]
   },
   {
